# drawme

./: .gitignore  README.rst  pyproject.toml
drawme/: game.py  gamepad.py  main.py  perry.py  shapes.py  tools.py
tests/: test_drawme.py
